...
                        child: Column(
                          mainAxisSize: MainAxisSize.min,
                          children: [
                            const Icon(Icons.lock_person_rounded, size: 80, color: Color(0xFF36ADA3)),
                            const SizedBox(height: 16),
                            const Text(
                              'GearShift Login',
                              style: TextStyle(fontSize: 28, fontWeight: FontWeight.bold, color: Colors.white, letterSpacing: 1.5),
                            ),
                            const Text(
                              'Welcome Back',
                              style: TextStyle(fontSize: 16, color: Colors.white70),
                            ),
...
                                ),
                                onPressed: () {
                                  context.read<AuthBloc>().add(
                                    LoginRequested(_emailController.text.trim(), _passwordController.text.trim()),
                                  );
                                },
                                child: const Text('MASUK', style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold, color: Colors.white, letterSpacing: 1)),
                              ),
                            ),
                            const SizedBox(height: 16),

                            // TOMBOL GOOGLE SIGN-IN
                            SizedBox(
...

                            // Tombol Register
                            TextButton(
                              onPressed: () {
                                Navigator.push(context, MaterialPageRoute(builder: (context) => const RegisterPage()));
                              },
                              child: const Text('Belum punya akun? Daftar di sini', style: TextStyle(color: Colors.white, fontSize: 13)),
                            ),

                            // ==========================================
                            // BLOK UI AUTENTIKASI BIOMETRIK (SIDIK JARI)
                            // ==========================================
                            const Padding(
...
