...
              activeIcon: Icon(Icons.smart_toy_rounded),
              label: 'Mekanik AI',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.person_outline),
              activeIcon: Icon(Icons.person_rounded),
              label: 'Profil',
            ),
          ],
        ),
      ),
    );
  }
...
