...
                    activeColor: theme.primaryColor,
                  ),
                ),
                ListTile(
                  contentPadding: EdgeInsets.zero,
                  leading: const Icon(Icons.logout, color: Colors.red),
                  title: const Text('Keluar (Logout)', style: TextStyle(color: Colors.red, fontWeight: FontWeight.bold)),
                  onTap: () async {
                    // Logika logout tetap sama
                    showDialog(context: context, barrierDismissible: false, builder: (context) => const Center(child: CircularProgressIndicator()));
                    try {
                      await Supabase.instance.client.auth.signOut();
                      if (context.mounted) Navigator.pop(context);
...
